# nifpga-cpp

./: .gitignore  readme.md
SharedFifoExample/: .gitignore  HostMain.gvi  README.txt  Resources.grsc  SharedFIFOs.lvproject  Toplevel.gvi
SharedFifoExample/Builds/: USRP-SharedFifos-0001.lvinfo
SharedFifoExample/C-Code/: CMakeLists.txt  NiFpga_Toplevel.h  main.cpp
SharedFifoExample/PythonCode/: pythonHost.py
example/: CMakeLists.txt  main.cpp
nifpga-cpp/: nifpga-cpp-create-header.py  nifpga-cpp.hpp
prototype/: CMakeLists.txt  bitfile.hpp  main.cpp  nifpga-cpp-create-header.py  nifpga-cpp.hpp
src/: NiFpga.c  nifpga-cpp-create-header.py
